# bmad_method_gulag

./: AGENTS.md  BMAD-method-gulag-09-2025.odp  README.md  debug_db.py  opencode.jsonc  pokedex.db  pyproject.toml
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/: copilot-instructions.md
.github/chatmodes/: dev.chatmode.md
.github/workflows/: ci.yaml
docs/: 1000.json  architecture.md  front-end-spec.md  greenfield-fullstack-plan.md  idea.md  prd.md  requirements-trace.md  risk-nfr.md  runbook.md  ui-wireframes.md
docs/qa/gates/: epic-2-3-phase2-architecture-design.yml  epic-4-phase4-testing.yml
public/ui/: index.html
src/: models.py  schemas.py
src/api/: main.py
src/etl/: main.py
tests/api/: test_api.py
tests/e2e/: test_ui.py
tests/etl/: test_etl.py
